--- a/charts/sscs-tribunals-api/values.ccd.preview.template.yaml
+++ b/charts/sscs-tribunals-api/values.ccd.preview.template.yaml
@@ -934,6 +934,12 @@ camunda-bpm:
     devcpuLimits: 1
     devmemoryLimits: 1Gi
     readinessDelay: 90
+    secrets:
+      CAMUNDA_DB_PASSWORD:
+        secretRef: postgres
+        key: PASSWORD
+        disabled:
+          false
     environment:
       CAMUNDA_API_AUTH_ENABLED: false
       CAMUNDA_DB_HOST: sscs-preview.postgres.database.azure.com
@@ -943,11 +949,7 @@ camunda-bpm:
       S2S_URL: http://rpe-service-auth-provider-aat.service.core-compute-aat.internal
       CAMUNDA_DB_CONN_OPTIONS: "?stringtype=unspecified&reWriteBatchedInserts=true&sslmode=require"
       RELEASE_REVISION: "{{ .Release.Revision }}"
-    secrets:
-      spring.datasource.password:
-        secretRef: postgres
-        key: PASSWORD
-        disabled: false
+
 
 wa-task-management-api:
   java:
