--- a/charts/sscs-tribunals-api/values.ccd.preview.template.yaml
+++ b/charts/sscs-tribunals-api/values.ccd.preview.template.yaml
@@ -939,8 +939,7 @@ camunda-bpm:
       CAMUNDA_DB_PASSWORD:
         secretRef: postgres
         key: PASSWORD
-        disabled:
-          false
+        disabled: false
     environment:
       CAMUNDA_API_AUTH_ENABLED: false
       CAMUNDA_DB_HOST: sscs-preview.postgres.database.azure.com
@@ -1044,10 +1043,12 @@ wa-workflow-api:
       POSTGRES_HOST: sscs-preview.postgres.database.azure.com
       POSTGRES_NAME: "pr-${CHANGE_ID}-wa_workflow_api"
       POSTGRES_USERNAME: hmcts
-      POSTGRES_CONNECTION_OPTIONS: ""
+      POSTGRES_CONNECTION_OPTIONS: "?stringtype=unspecified&reWriteBatchedInserts=true&sslmode=require"
       S2S_SECRET_WORKFLOW_API: ${S2S_SECRET_WORKFLOW_API}
       TASK_MANAGEMENT_URL: http://{{ .Release.Name }}-wa-task-management-api
       LAUNCH_DARKLY_SDK_KEY: ${WA_LAUNCH_DARKLY_SDK_KEY}
+      SPRING_JPA_PROPERTIES_HIBERNATE_DEFAULT_SCHEMA: wa_workflow_api
+      SPRING_FLYWAY_SCHEMAS: wa_workflow_api
 
 wa-message-cron-service:
   job:
