--- a/charts/sscs-tribunals-api/values.ccd.preview.template.yaml
+++ b/charts/sscs-tribunals-api/values.ccd.preview.template.yaml
@@ -209,6 +209,9 @@ am-org-role-mapping-service:
       ORG_ROLE_MAPPING_DB_PORT: 5432
       ORG_ROLE_MAPPING_DB_OPTIONS: "?stringtype=unspecified"
       RUN_LD_ON_STARTUP: true
+      TESTING_SUPPORT_ENABLED: true
+      JUDICIAL_REF_APP_V2_ACTIVE: true
+      JUDICIAL_REF_APP_V2_FILTER_AUTHS_BY_APP_ID: true
 
 aac-manage-case-assignment:
   enabled: true
