--- a/charts/sscs-tribunals-api/values.ccd.preview.template.yaml
+++ b/charts/sscs-tribunals-api/values.ccd.preview.template.yaml
@@ -38,6 +38,7 @@ java:
     POST_HEARINGS_B_FEATURE: true
     ADJOURNMENT_FEATURE: true
     GAPS_SWITCHOVER_FEATURE: true
+    ELASTIC_SEARCH_FEATURE: true
     DUMMY: true
 
 idam-pr:
