--- a/src/main/resources/config/application.properties
+++ b/src/main/resources/config/application.properties
@@ -134,6 +134,8 @@ feature.snl.adjournment.enabled: ${ADJOURNMENT_FEATURE:false}
 feature.case-access-management.enabled: ${CASE_ACCESS_MANAGEMENT_FEATURE:false}
 feature.postHearings.enabled: ${POST_HEARINGS_FEATURE:false}
 feature.postHearingsB.enabled: ${POST_HEARINGS_B_FEATURE:false}
+feature.elasticsearch.enabled:  ${ELASTIC_SEARCH_FEATURE:false}
+feature.elinksV2.enabled: ${ELINKS_V2_FEATURE_ENABLED:false}
 
 case_document_am.url=${CASE_DOCUMENT_AM_URL:http://localhost:4455}
 
