--- a/charts/sscs-tribunals-api/values.ccd.preview.template.yaml
+++ b/charts/sscs-tribunals-api/values.ccd.preview.template.yaml
@@ -734,7 +734,7 @@ sscs-hearings-api:
         key: primaryKey
 
 hmc-cft-hearing-service:
-  enabled: false
+  enabled: true
   java:
     releaseNameOverride: ${SERVICE_NAME}-hmc-cft-hearing-service
     image: "hmctspublic.azurecr.io/hmc/cft-hearing-service:latest"
@@ -783,5 +783,12 @@ servicebus:
     topics:
       - name: main-topic
         subscriptionNeeded: yes
+      - name: hmc-to-cft
+    subscriptions:
+      - name: hmc-to-sscs-subscription
     queues:
       - name: sscs-orchestrator-queue-preview
+      - name: hmc-from-hmi
+      - name: hmc-to-hmi
+      - name: tribunals-to-hearing-api
+
