--- a/charts/sscs-tribunals-api/values.ccd.preview.template.yaml
+++ b/charts/sscs-tribunals-api/values.ccd.preview.template.yaml
@@ -718,8 +718,8 @@ sscs-hearings-api:
       TRIBUNALS_HEARINGS_LISTENING_ENABLED: true
       TRIBUNALS_EVENT_QUEUE_NAME: "tribunals-to-hearing-api"
       TRIBUNALS_EVENT_QUEUE_POLICY_NAME: RootManageSharedAccessKey
-      TRIBUNALS_EVENT_QUEUE_NAMESPACE: "sscs-servicebus-preview"
-      HMC_HEARINGS_TOPIC_NAMESPACE: "sscs-servicebus-preview"
+      TRIBUNALS_EVENT_QUEUE_NAMESPACE: "sscs-sb-preview"
+      HMC_HEARINGS_TOPIC_NAMESPACE: "sscs-sb-preview"
       #HMC_DEPLOYMENT_ID: "sscs-hearings-id-{{ .Values.global.environment }}"
     secrets:
       TRIBUNALS_EVENT_QUEUE_ACCESS_KEY:
