--- a/charts/sscs-tribunals-api/values.ccd.preview.template.yaml
+++ b/charts/sscs-tribunals-api/values.ccd.preview.template.yaml
@@ -39,7 +39,7 @@ java:
     ADJOURNMENT_FEATURE: true
     GAPS_SWITCHOVER_FEATURE: true
     ELASTIC_SEARCH_FEATURE: true
-    ELINKS_V2_FEATURE_ENABLED: true
+    ELINKS_V2_FEATURE_ENABLED: false
     DUMMY: false
 
 idam-pr:
