--- a/charts/sscs-tribunals-api/values.ccd.preview.template.yaml
+++ b/charts/sscs-tribunals-api/values.ccd.preview.template.yaml
@@ -711,7 +711,7 @@ sscs-hearings-api:
       EXUI_API_URL: "https://${SERVICE_NAME}-xui"
       HMC_API_URL: "http://hmc-cft-hearing-service-{{ .Values.global.environment }}.service.core-compute-{{ .Values.global.environment }}.internal"
       #Messaging
-      HMC_HEARINGS_LISTENING_ENABLED: false
+      HMC_HEARINGS_LISTENING_ENABLED: true
       HMC_HEARINGS_TOPIC_POLICY_NAME: RootManageSharedAccessKey
       HMC_HEARINGS_TOPIC_NAME: "hmc-to-cft-aat"
       HMC_HEARINGS_TOPIC_SUBSCRIPTION_NAME: "hmc-to-sscs-subscription-aat"
@@ -726,7 +726,7 @@ sscs-hearings-api:
         secretRef: sscs-sb-preview
         key: primaryKey
       HMC_HEARINGS_TOPIC_ACCESS_KEY:
-        secretRef: sscs-sb-preview
+        secretRef: hmc-servicebus-aat
         key: primaryKey
 
 hmc-cft-hearing-service:
