--- a/charts/sscs-tribunals-api/values.ccd.preview.template.yaml
+++ b/charts/sscs-tribunals-api/values.ccd.preview.template.yaml
@@ -719,11 +719,16 @@ sscs-hearings-api:
       TRIBUNALS_EVENT_QUEUE_POLICY_NAME: RootManageSharedAccessKey
       TRIBUNALS_EVENT_QUEUE_NAMESPACE: sscs-sb-preview
       HMC_HEARINGS_TOPIC_NAMESPACE: hmc-servicebus-aat
-      #HMC_DEPLOYMENT_ID: "sscs-hearings-id-{{ .Values.global.environment }}"
+      HMC_DEPLOYMENT_ID: "sscs-hearings-id-{{ .Values.global.environment }}"
     secrets:
       TRIBUNALS_EVENT_QUEUE_ACCESS_KEY:
         secretRef: sscs-sb-preview
         key: primaryKey
+    keyVaults:
+      sscs:
+        secrets:
+          - name: hmc-servicebus-shared-access-key-tf
+            alias: HMC_HEARINGS_TOPIC_ACCESS_KEY
 
 hmc-cft-hearing-service:
   enabled: false
