--- a/charts/sscs-tribunals-api/values.ccd.preview.template.yaml
+++ b/charts/sscs-tribunals-api/values.ccd.preview.template.yaml
@@ -736,6 +736,11 @@ sscs-hearings-api:
         secrets:
           - name: hmc-servicebus-shared-access-key-tf
             alias: HMC_HEARINGS_TOPIC_ACCESS_KEY
+          - name: idam-sscs-systemupdate-user
+            alias: IDAM_SSCS_SYSTEMUPDATE_USER
+          - name: idam-sscs-systemupdate-password
+            alias: IDAM_SSCS_SYSTEMUPDATE_PASSWORD
+
     terraformEnvironmentVariables:
       TF_VAR_deploymentId: hearing-deployment-${SERVICE_NAME}
 
