--- a/charts/sscs-tribunals-api/values.ccd.preview.template.yaml
+++ b/charts/sscs-tribunals-api/values.ccd.preview.template.yaml
@@ -736,10 +736,16 @@ sscs-hearings-api:
         secrets:
           - name: hmc-servicebus-shared-access-key-tf
             alias: HMC_HEARINGS_TOPIC_ACCESS_KEY
-          - name: idam-oauth-user
+          - name: sscs-s2s-secret
+            alias: IDAM_S2S_AUTH_TOTP_SECRET
+          - name: idam-sscs-systemupdate-user
             alias: IDAM_SSCS_SYSTEMUPDATE_USER
-          - name: idam-sscs-oauth2-client-secret
+          - name: idam-sscs-systemupdate-password
             alias: IDAM_SSCS_SYSTEMUPDATE_PASSWORD
+          - name: idam-oauth-user
+            alias: IDAM_OAUTH2_CLIENT_ID
+          - name: idam-sscs-oauth2-client-secret
+            alias: IDAM_OAUTH2_CLIENT_SECRET
     terraformEnvironmentVariables:
       TF_VAR_deploymentId: hearing-deployment-${SERVICE_NAME}
 
